--- a/train_original.config
+++ b/train_original.config
@@ -6,6 +6,8 @@ dev_dir=data/dev.bmes
 test_dir=data/test.bmes
 model_dir=data/lstmcrf
 word_emb_dir=data/glove.6B.50d.txt
+train_acc_file=train_acc_lstm_cnn_crf.pkl
+dev_acc_file=dev_acc_lstm_cnn_crf.pkl
 
 #raw_dir=
 #decode_dir=
@@ -24,7 +26,7 @@ char_emb_dim=30
 use_crf=True
 use_char=True
 word_seq_feature=LSTM
-char_seq_feature=CNN
+char_seq_feature=LSTM
 #feature=[POS] emb_size=20
 #feature=[Cap] emb_size=20
 #nbest=1
@@ -32,20 +34,20 @@ char_seq_feature=CNN
 ###TrainingSetting###
 status=train
 optimizer=SGD
-iteration=10000
+iteration=30
 batch_size=32
 ave_batch_loss=False
 
 ###Hyperparameters###
-cnn_layer=4
+cnn_layer=2
 char_hidden_dim=50
 hidden_dim=200
 dropout=0.5
 lstm_layer=1
 bilstm=True
-learning_rate=0.015
+learning_rate=0.05
 lr_decay=0.05
-#momentum=0
+momentum=0
 l2=1e-8
 gpu=True
 #clip=
