--- a/train_original_lstm_cnn.config
+++ b/train_original_lstm_cnn.config
@@ -4,7 +4,7 @@
 train_dir=data/train.bmes
 dev_dir=data/dev.bmes
 test_dir=data/test.bmes
-model_dir=data/lstmcrf
+model_dir=data/lstmcrf_partial
 word_emb_dir=data/glove.6B.50d.txt
 train_acc_file=train_acc_lstm_cnn_crf.pkl
 dev_acc_file=dev_acc_lstm_cnn_crf.pkl
