--- a/train_partial_lstm_cnn.config
+++ b/train_partial_lstm_cnn.config
@@ -2,8 +2,8 @@
 
 ### I/O ###
 train_dir=data/train_partial.bmes
-dev_dir=data/dev_partial.bmes
-test_dir=data/test_partial.bmes
+dev_dir=data/dev.bmes
+test_dir=data/test.bmes
 model_dir=data/lstmcrf
 word_emb_dir=data/glove.6B.50d.txt
 train_acc_file=train_acc_lstm_cnn_crf.pkl
@@ -26,7 +26,7 @@ char_emb_dim=30
 use_crf=True
 use_char=True
 word_seq_feature=LSTM
-char_seq_featu
+char_seq_feature=CNN
 #feature=[POS] emb_size=20
 #feature=[Cap] emb_size=20
 #nbest=1
@@ -45,7 +45,7 @@ hidden_dim=200
 dropout=0.5
 lstm_layer=1
 bilstm=True
-learning_rate=0.015
+learning_rate=0.005
 lr_decay=0.05
 momentum=0
 l2=1e-8
