--- a/train_wiki_lstm_cnn.config
+++ b/train_wiki_lstm_cnn.config
@@ -1,11 +1,16 @@
 ### use # to comment out the configure item
 
 ### I/O ###
-train_dir=sample_data/train.bmes
-dev_dir=sample_data/dev.bmes
-test_dir=sample_data/test.bmes
-model_dir=sample_data/lstmcrf
-word_emb_dir=sample_data/sample.word.emb
+#train_dir=data/train_wiki_sample_new_enriched.bmes
+#dev_dir=data/dev_new.bmes
+#test_dir=data/test_new.bmes
+train_dir=data_bioes/train_wiki_sample2_new_enriched.bioes
+dev_dir=data_bioes/dev_new.bioes
+test_dir=data_bioes/test_new.bioes
+model_dir=data_bioes/lstmcrf_partial
+word_emb_dir=data/glove.6B.100d.txt
+train_acc_file=train_acc_lstm_cnn_crf_wiki.pkl
+dev_acc_file=dev_acc_lstm_cnn_crf_wiki.pkl
 
 #raw_dir=
 #decode_dir=
@@ -17,7 +22,7 @@ norm_word_emb=False
 norm_char_emb=False
 number_normalized=True
 seg=True
-word_emb_dim=50
+word_emb_dim=100
 char_emb_dim=30
 
 ###NetworkConfiguration###
@@ -32,7 +37,7 @@ char_seq_feature=CNN
 ###TrainingSetting###
 status=train
 optimizer=SGD
-iteration=1
+iteration=20
 batch_size=10
 ave_batch_loss=False
 
@@ -47,5 +52,5 @@ learning_rate=0.015
 lr_decay=0.05
 momentum=0
 l2=1e-8
-#gpu
+gpu=True
 #clip=
